Add deploy config

--- a/angular.json
+++ b/angular.json
@@ -131,6 +131,10 @@
               "devServerTarget": "fws-take-home:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {}
         }
       }
     }
