--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "^4.21.0",
     "@typescript-eslint/parser": "^4.21.0",
+    "angular-cli-ghpages": "^1.0.0-rc.1",
     "codelyzer": "^6.0.0",
     "eslint": "^7.23.0",
     "jasmine-core": "~3.6.0",
